# ktpUtils

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  main.cpp  vcpkg.json
src/: CmakeLists.txt  colors.hpp  libppm.hpp  object_pool.hpp  timer.hpp
src/tests/: CmakeLists.txt  timer_tests.cpp
